Add readme note on BisqFX IDEA run configuration